<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ll_views"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:id="@+id/ll_tab2_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal">



            </LinearLayout>

            <EditText
                android:id="@+id/et_data_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/data_card"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="10dp"
                android:paddingLeft="10dp"
                />

            <Spinner
                android:id="@+id/spnr_oprator_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_amount_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/amount"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="10dp"
                android:paddingLeft="10dp"
                />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
               android:background="@color/button_color"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>