<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />


    <LinearLayout
        android:id="@+id/ll_views"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:id="@+id/ll_tab1_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Enter Consumer ID"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Spinner
                android:id="@+id/spnr_oprator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="1dp">

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:drawableLeft="@drawable/rs"
                    android:hint="@string/amount"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/browse_plan"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_recharge_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/gredient_button"
                android:padding="10dp"
                android:text="@string/proced_to_recharge"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
