<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ll_views"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/ll_tab1_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/prepaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Prepaid"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/postpaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:text="Postpaid"
                        android:textColor="@color/black" />
                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Spinner
                android:id="@+id/spnr_oprator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/amount"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <Button
                android:id="@+id/btn_recharge_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/gredient_button"
                android:padding="10dp"
                android:text="@string/recharge_now"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
